# whatsapp-gdrive-extractor

./: .dockerignore  .gitignore  Containerfile  DISTRIBUTION.md  LICENSE  README.md  README_ar.md  README_bg.md  README_bn.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fa.md  README_fi.md  README_fr.md  README_gu.md  README_hi.md  README_hr.md  README_hu.md  README_id.md  README_it.md  README_ja.md  README_ko.md  README_mr.md  README_nl.md  README_no.md  README_pl.md  README_pt.md  README_ro.md  README_ru.md  README_sk.md  README_sr.md  README_sv.md  README_ta.md  README_te.md  README_th.md  README_tl.md  README_tr.md  (+17 more)
.github/workflows/: ci.yml
5215549688473/files/Backups/: backup_settings.json.crypt14  chatsettingsbackup.db.crypt14  smb_backup.db.crypt14  (+6 more)
docs/: README_ar.md  README_bg.md  README_bn.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fa.md  README_fi.md  README_fr.md  README_gu.md  README_hi.md  README_hr.md  README_hu.md  README_id.md  README_it.md  README_ja.md  README_ko.md  README_mr.md  README_nl.md  README_no.md  README_pl.md  README_pt.md  README_ro.md  README_ru.md  README_sk.md  README_sr.md  README_sv.md  README_ta.md  README_te.md  README_th.md  README_tl.md  README_tr.md  README_uk.md  README_ur.md  README_vi.md  README_zh.md  translate.py
frontend/static/: script.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: extractor.rs  lib.rs
src/whatsapp_extractor/: __main__.py  app.py  main.py
static/: script.js  style.css
templates/: dashboard.html  login.html
(+114 files in other folders)
